--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <div class="accessory__content">
                         <img src="assets/img/" alt="" class="accessory__img">
                         <h2 class="section-promo">Sebelum Kehabisan dan Terlambat</h2>
-                        <h2 class="section-promo">PROMO DISKON %</h2>
+                        <h2 class="section-promo">PROMO DISKON 21%</h2>
                         <span class="accessory__preci" style="text-decoration: line-through red; font-size: 20px;">dari Rp 94.000</span>
                         <h1 class="section-price">Jadi Rp 74.260</h1>                        
                     </div>                                                                       
