--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 /* Pengaturan Whatsapp */
                 var walink 		= 'https://web.whatsapp.com/send',
                     phone 		= '6282127275464',
-                    text 		= 'Halo saya ingin memesan produk FastKleen Fat Cleaner ',
+                    text 		= 'Halo saya ingin memesan produk FastKleen Wash Machine Cleaner ',
                     text_yes	= 'Pesanan Anda berhasil terkirim.',
                     text_no 	= 'Isilah formulir terlebih dahulu.';
         
