--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                 <div class="accessory__content">
                     <img src="assets/img/" alt="" class="accessory__img">
                     <h2 class="section-promo">Sebelum Kehabisan dan Terlambat</h2>
-                    <h2 class="section-promo">PROMO DISKON 21%</h2>
-                    <span class="accessory__preci" style="text-decoration: line-through red; font-size: 20px;">dari Rp 94.000</span>
-                    <h1 class="section-price">Jadi Rp 74.260</h1>
+                    <h2 class="section-promo">PROMO DISKON 50%</h2>
+                    <span class="accessory__preci" style="text-decoration: line-through red; font-size: 20px;">dari Rp 198.000</span>
+                    <h1 class="section-price">Jadi Rp 99.000</h1>
                 </div>
             </div>
         </section>
@@ -214,8 +214,8 @@
 
             <div class="footer__content">
                 <h3 class="footer__title">Media Sosial</h3>
-                <a href="#" class="footer__social"><i class='bx bxl-tiktok'></i></a>
-                <a href="#" class="footer__social"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.tiktok.com/@pembersihminyakdanlemak" class="footer__social" target="_blank"><i class='bx bxl-tiktok'></i></a>
+                <a href="https://www.instagram.com/fastkleen.id" class="footer__social" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
             </div>
         </div>
 
@@ -232,7 +232,7 @@
 
             /* Pengaturan Whatsapp */
             var walink = 'https://web.whatsapp.com/send',
-                phone = '6282127275464',
+                phone = '6283898333101',
                 text = 'Halo saya ingin memesan produk FastKleen Wash Machine Cleaner ',
                 text_yes = 'Pesanan Anda berhasil terkirim.',
                 text_no = 'Isilah formulir terlebih dahulu.';
