update form, add meta pixel, etc

--- a/index.html
+++ b/index.html
@@ -15,10 +15,35 @@
     <!--========== FAVICON ==========-->
     <link rel="shortcut icon" href="assets/img/Logo FASTKLEEN.png" type="image/x-icon">
 
-    <!--========== JQUERY ==========-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-
     <title>FastKleen Wash Machine Cleaner</title>
+
+    <!-- Meta Pixel Code -->
+    <script>
+        ! function(f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function() {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '211896354835848');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=211896354835848&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
 </head>
 
 <body>
@@ -155,35 +180,17 @@
         <section class="send section" id="contact">
             <div class="send__container bd-container bd-grid">
                 <div class="send__content">
-                    <form action="" class="contact__form">
-                        <h3 class="header__contact">Pemesanan Produk</h3>
-                        <div class="contact__inputs">
-                            <div class="contact__content">
-                                <input type="text" name="name" class="contact__input" placeholder=" " id="name">
-                                <label for="" class="contact__label">Nama</label>
+                    <!-- OrderOnline Embed Code - v6.3.5 -->
+                    <div class="ooef">
+                        <form class="orderonline-embed-form" data-username="promohebat" data-product-slug="wash-machine-cleaner" id="oo-embed-form-wash-machine-cleaner-4525">
+                            <div class="ooef-loader">
+                                <div aria-live="polite" role="status">
+                                    <div>Loading...</div>
+                                </div>
                             </div>
-                            <div class="contact__content">
-                                <input type="text" name="phone" class="contact__input" placeholder=" " id="phone">
-                                <label for="" class="contact__label">No. WhatsApp</label>
-                            </div>
-                            <div class="contact__content">
-                                <select name="product" class="contact__input" id="product">
-                                        <option value="">-- Jumlah Produk --</option>
-                                        <option value="1 Pcs"> 1 Pcs</option>
-                                        <option value="2 Pcs"> 2 Pcs</option>
-                                        <option value="3 Pcs"> 3 Pcs</option>
-                                    </select>
-                            </div>
-                            <div class="contact__content contact__area">
-                                <textarea name="description" class="contact__input" rows="3" id="description"></textarea>
-                                <label for="" class="contact__label">Alamat</label>
-                            </div>
-
-                            <button class="button send-msg">Pesan via WhatsApp</button>
-
-                            <div id="text-info"></div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
+                    <!-- End OrderOnline Embed Code -->
                 </div>
 
                 <div class="send__img">
@@ -222,41 +229,75 @@
         <p class="footer__copy">&#169; 2023 FastKleen by Makna Store</p>
     </footer>
     <!--========== PEMESANAN VIA WHATSAPP ==========-->
-    <script type="text/javascript">
-        $(document).on('click', '.send', function() {
-            /* Inputan Formulir */
-            var input_name = $("#name").val(),
-                input_phone = $("#phone").val(),
-                input_product = $("#product").val(),
-                input_description = $("#description").val();
-
-            /* Pengaturan Whatsapp */
-            var walink = 'https://web.whatsapp.com/send',
-                phone = '6283898333101',
-                text = 'Halo saya ingin memesan produk FastKleen Wash Machine Cleaner ',
-                text_yes = 'Pesanan Anda berhasil terkirim.',
-                text_no = 'Isilah formulir terlebih dahulu.';
-
-            /* Smartphone Support */
-            if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-                var walink = 'whatsapp://send';
+    <script>
+        if (typeof ooLogError != 'function') {
+            var ooLogError = function(error) {
+                var req = new XMLHttpRequest();
+                var payload = JSON.stringify({
+                    url: document.location.href,
+                    line: error.line,
+                    stack: error.stack
+                });
+                var params = 'message=' + encodeURIComponent(error.name) + '&payload=' + encodeURIComponent(payload) + '&type=embed&level=error';
+                req.open('POST', 'https://api.orderonline.id/log', true);
+                req.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+                req.send(params);
+            };
+        }
+        try {
+            if (typeof ooEmbedScript != 'function') {
+                var ooEmbedScript = function() {
+                    ! function(w, d, e, v, id, t, s) {
+                        if (d.getElementById(id)) return;
+                        t = d.createElement(e);
+                        t.async = !0;
+                        t.src = v;
+                        t.id = id;
+                        s = d.getElementsByTagName(e)[0];
+                        s.parentNode.insertBefore(t, s);
+                    }(window, document, 'script', 'https://cdn.orderonline.id/js/embed-slim.min.js?v=6.3.5', 'oo-embed-js');
+                };
             }
-
-            if (input_name != "" && input_phone != "" && input_product != "") {
-                /* Whatsapp URL */
-                var checkout_whatsapp = walink + '?phone=' + phone + '&text=' + text + '%0A%0A' +
-                    '*Nama* : ' + input_name + '%0A' +
-                    '*No. Whatsapp* : ' + input_phone + '%0A' +
-                    '*Jumlah Produk* : ' + input_product + '%0A' +
-                    '*Catatan* : ' + input_description + '%0A';
-
-                /* Whatsapp Window Open */
-                window.open(checkout_whatsapp, '_blank');
-                document.getElementById("text-info").innerHTML = '<div class="alert alert-success">' + text_yes + '</div>';
+            if (typeof orderOnlineInit != 'function') {
+                var orderOnlineInit = function(w, n) {
+                    if (w.ooe) return;
+                    n = w.ooe = function() {
+                        n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    };
+                    if (!w._ooe) w._ooe = n;
+                    n.push = n;
+                    n.loaded = !0;
+                    n.version = '6.3.5';
+                    n.queue = [];
+                };
+            }
+            orderOnlineInit(window);
+            ooe('setup', 'redirect', 'https://promohebat.orderonline.id');
+            ooe('init', 'promohebat', 'wash-machine-cleaner', null, 'oo-embed-form-wash-machine-cleaner-4525', {
+                "mode": "page",
+                "action": "Klik untuk pemesanan",
+                "title": "Form Pemesanan",
+                "triggerPixel": false,
+                "triggerGtm": false
+            });
+            if (!window.jQuery) {
+                ! function(w, d, e, v, id, t, s) {
+                    if (d.getElementById(id)) return;
+                    t = d.createElement(e);
+                    t.async = !0;
+                    t.src = v;
+                    t.id = id;
+                    t.addEventListener('load', ooEmbedScript);
+                    s = d.getElementsByTagName(e)[0];
+                    s.parentNode.insertBefore(t, s);
+                }(window, document, 'script', 'https://cdn.orderonline.id/js/vendor/jquery.min.js', 'oo-embed-jquery');
             } else {
-                document.getElementById("text-info").innerHTML = '<div class="alert alert-danger">' + text_no + '</div>';
+                ooEmbedScript();
             }
-        });
+        } catch (e) {
+            ooLogError(e);
+            throw e;
+        }
     </script>
     <!--========== SCROLL REVEAL ==========-->
     <script src="https://unpkg.com/scrollreveal"></script>
